--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .header{
-    background-color: grey;
+    background-color: #636e72;
     height: 10%;
     width: 100%;
     display: flex;
@@ -27,6 +27,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f7f1e3;
 }
 
 .colors{
@@ -38,8 +39,8 @@ body{
 }
 
 .col1,.col2,.col3,.col4,.col5{
-    height: 95%;
-    width:18%;
+    height: 87%;
+    width:15%;
     border: 1px solid;
     border-radius: 5px;
 }
@@ -72,6 +73,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f7f1e3;
 }
 
 .marker-width{
@@ -100,6 +102,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #f7f1e3;
 }
 
 .ew1,.ew2,.ew3{
@@ -164,6 +167,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #f7f1e3;
 }
 
 .zoom{
@@ -198,6 +202,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: #f7f1e3;
 }
 
 .undo-redo{
@@ -218,4 +223,39 @@ body{
 
 .undo{
     border-right: 1px solid;
+}
+
+.eraser-pen-section{
+    height:50%;
+    width:6%;
+    margin-left: 3rem;
+    background-color:white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #f7f1e3;
+}
+
+.eraser-pen{
+    width:100%;
+    height:95%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.eraser,.pen{
+    height:95%;
+    width:50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pen{
+    border-right: 1px solid;
+}
+
+i{
+    font-size: 1.7rem!important;
 }
