--- a/style.css
+++ b/style.css
@@ -157,46 +157,10 @@ body{
     display: inline-block;
 }
 
-.zoom-section{
-    height:50%;
-    width:6%;
-    margin-left: 3rem;
-    background-color:white;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #f7f1e3;
-}
-
-.zoom{
-    width:100%;
-    height:100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.zoom-in,.zoom-out{
-    height:95%;
-    width:50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.material-icons{
-    font-size: 2rem!important;
-}
-
-.zoom-in{
-    border-right: 1px solid;
-}
-
 .undo-redo-section{
     height:50%;
     width:6%;
     margin-left: 3rem;
-    background-color:white;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -227,7 +191,6 @@ body{
     height:50%;
     width:12%;
     margin-left: 3rem;
-    background-color:white;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -258,12 +221,10 @@ body{
     height:50%;
     width:3%;
     margin-left: 3rem;
-    background-color:white;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     background-color: #f7f1e3;
-    cursor:pointer;
 }
 
 .eraser-pen{
@@ -303,6 +264,11 @@ body{
 
 .eraser-selected{
     background-color: #95a5a6;
+}
+
+.eraser-pen-section:hover{
+    background-color: #95a5a6;
+    transition: 0.5s;
 }
 
 canvas{
