--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ body{
     width:100%;
     height:100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
 }
 
@@ -326,8 +326,8 @@ body{
     width:100%;
     height:100%;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
     cursor:default;
 }
 
@@ -336,7 +336,7 @@ body{
     width:50%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:center;
 }
 
 .colour-selected{
