--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body{
     background-color: #0984e3;
 }
 
-.title-colours,.title-width,.title-eraser,.title-undo,.title-redo,.title-shapes,.title-delete,.title-download{
+.title-colours,.title-width,.title-eraser,.title-undo,.title-redo,.title-shapes,.title-delete,.title-download,.title-upload{
     position: absolute;
     top:4.2rem;
     font-family: 'DM Sans', sans-serif;
@@ -238,47 +238,6 @@ body{
     transform: translateX(-50%);
 }
 
-.shapes-section{
-    height:42%;
-    width:12%;
-    margin-left: 3rem;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #f7f1e3;
-    cursor:default;
-}
-
-.shapes{
-    width:100%;
-    height:100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.shapes div:hover{
-    background-color: #95a5a6;
-    transition: 0.5s;
-}
-
-.shapes div{
-    height:95%;
-    width:50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.title-shapes{
-    left:calc(14rem + 45%);
-    transform: translateX(-50%);
-}
-
-.line,.rectangle,.circle{
-    border-right: 1px solid;
-}
-
 .eraser-pen-section{
     height:42%;
     width:3%;
@@ -307,12 +266,45 @@ body{
 }
 
 .title-delete{
-    left:calc(17rem + 52.5%);
+    left:calc(14rem + 40.5%);
     transform: translateX(-50%);
 }
 
+.title-upload{
+    left:calc(17rem + 43.5%);
+    transform: translateX(-50%);
+}
+
+.upload-section{
+    height:42%;
+    width:3%;
+    margin-left: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f7f1e3;
+    cursor:default;
+}
+
+.upload{
+    width:100%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    cursor:default;
+}
+
+.upload-btn{
+    height:95%;
+    width:50%;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+
 .title-download{
-    left:calc(20rem + 55.5%);
+    left:calc(20rem + 46.5%);
     transform: translateX(-50%);
 }
 
@@ -377,8 +369,17 @@ body{
     transition: 0.5s;
 }
 
-.rectangle-selected{
+.upload-section:hover{
     background-color: #95a5a6;
+    transition: 0.5s;
+}
+
+.upload-img{
+    height:150px;
+    width: auto;
+    position: absolute;
+    top:150px;
+    left:50px;
 }
 
 canvas{
